--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "JShengLong/jsl_auth",
+    "name": "j-sheng-long/jsl_auth",
     "description": "auth package for thinkphp5",
     "homepage": "https://github.com/JShengLong/jsl_auth",
     "license": "Apache-2.0",
